--- a/package.json
+++ b/package.json
@@ -19,12 +19,25 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@awesome-cordova-plugins/app-rate": "^5.37.3",
+    "@awesome-cordova-plugins/badge": "^5.37.3",
+    "@awesome-cordova-plugins/camera": "^5.37.3",
+    "@awesome-cordova-plugins/core": "^5.37.3",
+    "@awesome-cordova-plugins/geolocation": "^5.37.3",
+    "@awesome-cordova-plugins/sms": "^5.37.3",
+    "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.2",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-native/app-rate": "^4.20.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-apprate": "^1.7.2",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-camera": "^6.0.0",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-sms-plugin": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
