--- a/package.json
+++ b/package.json
@@ -24,19 +24,30 @@
     "@awesome-cordova-plugins/camera": "^5.37.3",
     "@awesome-cordova-plugins/core": "^5.37.3",
     "@awesome-cordova-plugins/geolocation": "^5.37.3",
+    "@awesome-cordova-plugins/native-storage": "^5.37.3",
     "@awesome-cordova-plugins/sms": "^5.37.3",
+    "@awesome-cordova-plugins/toast": "^5.37.3",
     "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.2",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.3",
     "@ionic-native/app-rate": "^4.20.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/native-storage": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-apprate": "^1.7.2",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-camera": "^6.0.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-x-toast": "^2.7.3",
     "cordova-sms-plugin": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
